mobile/ultrawide alignment and decor to ultrawide

--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
   <body>
     <nav class="nav">
       <div class="logo">
-        <img src="/src/img/substanceqiLogo.svg" alt="substanceqiLogo" />
+        <img
+          class="desktop"
+          src="/src/img/substanceqiLogo.svg"
+          alt="substanceqiLogo"
+        />
+        <img
+          class="mobile"
+          src="/src/img/mobileSubstanceqiLogo.svg"
+          alt="substanceqiLogo"
+        />
       </div>
       <div class="nav-menu">
         <ul class="nav-links">
@@ -116,39 +125,66 @@
     </section>
 
     <section class="about">
+      <img
+        class="abstract circle"
+        src="/src/img/abstract/strokeCircle.svg"
+        alt="circle constructed of lines"
+      />
+      <img
+        class="abstract circle-2"
+        src="/src/img/abstract/strokeCircle.svg"
+        alt="circle constructed of lines"
+      />
+      <img
+        src="/src/img/abstract/gradientStrokeTriangle.svg"
+        alt="colourful triangle made from stokes"
+        class="abstract triangle"
+      />
+      <img
+        src="/src/img/abstract/gradientDotGrid.svg"
+        alt="grid of coloured dots"
+        class="abstract dots"
+      />
       <div class="about-content">
         <div class="text-block first">
-          <h2 class="about-header">What we do</h2>
-          <p class="about-body">
-            We work on the stage of Market Insight and play a significant role
-            in progressing company performance.
-          </p>
-          <br />
-          <p class="about-body">
-            Fusing industry knowledge and intelligence with customer motivations
-            and drivers.
-          </p>
+          <div class="text-wrapper">
+            <h2 class="about-header">What we do</h2>
+            <p class="about-body">
+              We work on the stage of Market Insight and play a significant role
+              in progressing company performance.
+            </p>
+            <br />
+            <p class="about-body">
+              Fusing industry knowledge and intelligence with customer
+              motivations and drivers.
+            </p>
+          </div>
         </div>
         <div class="img-space multi-board second"></div>
         <div class="img-space house fourth"></div>
         <div class="text-block third">
-          <h2 class="about-header">We get involved</h2>
-          <p class="about-body">
-            With Director involvement at every stage we build relationships,
-            inspire people, and make research stimulating for everyone involved.
-          </p>
+          <div class="text-wrapper">
+            <h2 class="about-header">We get involved</h2>
+            <p class="about-body">
+              With Director involvement at every stage we build relationships,
+              inspire people, and make research stimulating for everyone
+              involved.
+            </p>
+          </div>
         </div>
         <div class="text-block fifth">
-          <h2 class="about-header">Problem solving</h2>
-          <p class="about-body">
-            We bring an open, collaborative attitude to all projects and breathe
-            life into the most prosaic of topics.
-          </p>
-          <br />
-          <p class="about-body">
-            From problem curation to solution, we challenge assumptions and
-            unpack the truth.
-          </p>
+          <div class="text-wrapper">
+            <h2 class="about-header">Problem solving</h2>
+            <p class="about-body">
+              We bring an open, collaborative attitude to all projects and
+              breathe life into the most prosaic of topics.
+            </p>
+            <br />
+            <p class="about-body">
+              From problem curation to solution, we challenge assumptions and
+              unpack the truth.
+            </p>
+          </div>
         </div>
         <div class="img-space rectangles sixth"></div>
       </div>
