Added coral to graphics

--- a/index.html
+++ b/index.html
@@ -160,8 +160,20 @@
             </p>
           </div>
         </div>
-        <div class="img-space multi-board second"></div>
-        <div class="img-space house fourth"></div>
+        <div class="img-space second">
+          <img
+            class="multi-board"
+            src="/src/img/svgGraphics/PinkDesktopMultiboard.svg"
+            alt=""
+          />
+        </div>
+        <div class="img-space fourth">
+          <img
+            class="house"
+            src="/src/img/svgGraphics/PinkDesktopHouse.svg"
+            alt=""
+          />
+        </div>
         <div class="text-block third">
           <div class="text-wrapper">
             <h2 class="about-header">We get involved</h2>
@@ -186,7 +198,9 @@
             </p>
           </div>
         </div>
-        <div class="img-space rectangles sixth"></div>
+        <div class="img-space rectangles sixth">
+          <img src="/src/img/svgGraphics/PinkRectangles.svg" alt="" />
+        </div>
       </div>
     </section>
 
@@ -200,14 +214,24 @@
       <svg
         class="desktop-services"
         preserveAspectRatio="none"
-        viewBox="0 0 1600 2429"
+        viewBox="0 0 1600 2523"
         fill="none"
+        xmlns="http://www.w3.org/2000/svg"
       >
         <path
-          d="M1632.47 0.87207L1606.5 2428.5C1065.5 1960.5 377.033 2416 3.49988 1895.5C-370.033 1375 -28.9385 533 -28.9385 533C-28.9385 533 179.062 286 541.967 372.372C694.38 408.647 977.467 338.872 1153.97 218.872C1330.47 98.8721 1632.47 0.87207 1632.47 0.87207Z"
+          d="M1705 79.5L1655 2447.5C1474.5 2189 299.533 2494 -74 1973.5C-447.533 1453 -74 925.5 -74 925.5C-74 925.5 -236.78 473.916 122 349.5C432 242 619 453 1023 242C1427 31 1705 79.5 1705 79.5Z"
+          fill="#BDCBEE"
+        />
+        <path
+          d="M1689 83.7165L1792.5 2523C1329 2070.5 165.5 2394 -66.5 1909C-298.5 1424 -23.4999 556.5 -23.4999 556.5C-23.4999 556.5 277.595 220.128 640.5 306.5C792.913 342.775 927.5 342.5 1129.5 238C1331.5 133.5 1689 83.7165 1689 83.7165Z"
+          fill="#7D96D5"
+        />
+        <path
+          d="M1663.83 0.5L1637.86 2428.13C1096.86 1960.13 408.397 2415.63 34.8634 1895.13C-338.67 1374.63 2.42505 532.628 2.42505 532.628C2.42505 532.628 180.095 292.628 543 379C695.413 415.275 1019.5 355.5 1185.33 218.5C1351.16 81.5 1663.83 0.5 1663.83 0.5Z"
           fill="#011138"
         />
       </svg>
+
       <!-- desktop services -->
       <svg
         class="mobile-services"
@@ -248,7 +272,7 @@
               </ul>
               <div class="popup-bottom">
                 <h5 class="popup-case">Case Studies</h5>
-                <a href="#">Related Case study link</a>
+                <p>Related Case study link</p>
               </div>
             </div>
             <!-- graph desktop -->
