added dimmer to mobile graph

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body id="mainScroll">
     <nav class="nav">
@@ -263,8 +267,10 @@
 
         <section class="graph-section">
           <div class="graph-container">
-            <div class="popup">
+            <div class="dimmer"></div>
+            <div class="popup fade-out">
               <h2 class="popup-title">Innovation</h2>
+              <span class="cross"> <i class="material-icons">clear</i></span>
               <ul class="popup-list">
                 <li class="popup-list-item">Bullet one</li>
                 <li class="popup-list-item">Bullet 2</li>
@@ -431,43 +437,43 @@
                 fill="#D0CDE1"
               />
               <g class="textClass">
-                <text class="graphBlob" id="innovation" x="41%" y="21%">
+                <text class="graphBlob" id="Innovation" x="41%" y="21%">
                   Innovation/NPD
                 </text>
-                <text class="graphBlob" id="branding" x="68%" y="30%">
+                <text class="graphBlob" id="Branding" x="68%" y="30%">
                   Branding
                 </text>
-                <text class="graphBlob" x="28%" y="42%">
+                <text id="Sensory" class="graphBlob" x="28%" y="42%">
                   <tspan x="28%" dy="0">Sensory</tspan>
                   <tspan x="28.5%" dy="3%">Testing</tspan>
                 </text>
-                <text class="graphBlob" x="65%" y="42%">
+                <text id="Ethno" class="graphBlob" x="65%" y="42%">
                   <tspan x="71%" dy="0">Ethnographic</tspan>
                   <tspan x="73%" dy="2.8%">Immersion</tspan>
                 </text>
-                <text class="graphBlob" x="52%" y="45%">
+                <text id="Equity" class="graphBlob" x="52%" y="45%">
                   <tspan x="53.5%" dy="0">Equity</tspan>
                   <tspan x="53%" dy="3%">Drivers</tspan>
                 </text>
-                <text class="graphBlob" x="45%" y="58%">
+                <text id="Customer" class="graphBlob" x="45%" y="58%">
                   <tspan x="44%" dy="0">Customer</tspan>
                   <tspan x="43.6%" dy="3%">Experience</tspan>
                 </text>
-                <text class="graphBlob" x="64%" y="66%">
+                <text id="Relationships" class="graphBlob" x="64%" y="66%">
                   Relationships
                 </text>
-                <text class="graphBlob" x="28%" y="67%">
+                <text id="User" class="graphBlob" x="28%" y="67%">
                   <tspan x="22%" dy="0">User</tspan>
                   <tspan x="18%" dy="3%">Experience</tspan>
                 </text>
-                <text class="graphBlob" x="25%" y="88%">
+                <text id="Product" class="graphBlob" x="25%" y="88%">
                   <tspan x="25%" dy="0">Product</tspan>
                   <tspan x="25.3%" dy="3%">Testing</tspan>
                 </text>
-                <text class="graphBlob" x="73%" y="75%">
+                <text id="Design" class="graphBlob" x="73%" y="75%">
                   Design
                 </text>
-                <text class="graphBlob" x="61%" y="86%">
+                <text id="SPAM" class="graphBlob" x="61%" y="86%">
                   S.P.A.M
                 </text>
               </g>
