refactored graph background

--- a/index.html
+++ b/index.html
@@ -483,7 +483,23 @@
       </div>
     </section>
 
-    <section class="industry"></section>
+    <section class="industry">
+      <h1 class="industry-title">Extensive Industry Experience</h1>
+      <div class="brandbox">
+        <img src="/src/img/industryImages/Blu.svg" alt="" />
+        <img src="/src/img/industryImages/YST.svg" alt="" />
+        <img src="/src/img/industryImages/pepsico.svg" alt="" />
+        <img src="/src/img/industryImages/aa.svg" alt="" />
+        <img src="/src/img/industryImages/ImperialBrands.svg" alt="" />
+        <img src="/src/img/industryImages/o2.svg" alt="" />
+        <img src="/src/img/industryImages/sony.svg" alt="" />
+        <img src="/src/img/industryImages/Nationwide.svg" alt="" />
+        <img src = "/src/img/industryImages/natwest.svg" alt="" />
+        <img src="/src/img/industryImages/royal-mail.svg" alt="" />
+        <img src="/src/img/industryImages/santader.svg" alt="" />
+      </div>
+    </div>
+    </section>
 
     <section class="knowMore">
       <svg
