added rectangle animation

--- a/index.html
+++ b/index.html
@@ -203,7 +203,28 @@
           </div>
         </div>
         <div class="img-space rectangles sixth">
-          <img src="/src/img/svgGraphics/PinkRectangles.svg" alt="" />
+          <!-- <img src="/src/img/svgGraphics/PinkRectangles.svg" alt="" /> -->
+          <svg width="596" height="323" viewBox="0 0 596 323" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path class = "solid-rect" d="M29.9395 193.33H262.921C270.389 193.33 276.444 199.385 276.444 206.854V308.976C276.444 316.445 270.389 322.5 262.921 322.5H29.9395C22.4706 322.5 16.4159 316.445 16.4159 308.976V206.854C16.4159 199.385 22.4706 193.33 29.9395 193.33Z" fill="#F2F2F2"/>
+            <path class = "ballOne" d="M432 71C422.611 71 415 63.3888 415 54C415 44.6112 422.611 37 432 37C441.389 37 449 44.6112 449 54C449 63.3888 441.389 71 432 71Z" fill="#D35766"/>
+            <path class = "circ-draw-stroke" opacity="0.5" d="M519 66.5C509.611 66.5 502 58.8888 502 49.5C502 40.1112 509.611 32.5 519 32.5C528.389 32.5 536 40.1112 536 49.5C536 58.8888 528.389 66.5 519 66.5Z" stroke="#3F3D56" stroke-miterlimit="10"/>
+            <path class = "ballThree" d="M312 317C302.611 317 295 309.389 295 300C295 290.611 302.611 283 312 283C321.389 283 329 290.611 329 300C329 309.389 321.389 317 312 317Z" fill="#F2F2F2"/>
+            <path class = "circ-draw-stroke" opacity = 0.5 d="M312 280.5C302.611 280.5 295 272.889 295 263.5C295 254.111 302.611 246.5 312 246.5C321.389 246.5 329 254.111 329 263.5C329 272.889 321.389 280.5 312 280.5Z" stroke="#3F3D56" stroke-miterlimit="10"/>
+            <path class = "ballTwo" d="M93 129C83.6112 129 76 121.389 76 112C76 102.611 83.6112 95 93 95C102.389 95 110 102.611 110 112C110 121.389 102.389 129 93 129Z" fill="#D35766"/>
+            <path class = "circ-draw-stroke" opacity="0.5" d="M180 151.5C170.611 151.5 163 143.889 163 134.5C163 125.111 170.611 117.5 180 117.5C189.389 117.5 197 125.111 197 134.5C197 143.889 189.389 151.5 180 151.5Z" stroke="#3F3D56" stroke-miterlimit="10"/>
+            <path class = "solid-rect" d="M255.776 94.9752H488.757C496.226 94.9752 502.281 101.03 502.281 108.499V210.622C502.281 218.09 496.226 224.145 488.757 224.145H255.776C248.307 224.145 242.252 218.09 242.252 210.622V108.499C242.252 101.03 248.307 94.9752 255.776 94.9752Z" fill="#34C1CF"/>
+            <path class = "rect-draw-stroke" d="M240.579 84H473.56C481.029 84 487.084 90.0547 487.084 97.5236V199.646C487.084 207.115 481.029 213.17 473.56 213.17H240.579C233.11 213.17 227.056 207.115 227.056 199.646V97.5236C227.056 90.0547 233.11 84 240.579 84Z" stroke="#3F3D56"/>
+            <path class = "rect-draw-stroke" d="M14.7431 182.355H247.724C255.193 182.355 261.248 188.41 261.248 195.878V298.001C261.248 305.47 255.193 311.525 247.724 311.525H14.7431C7.27422 311.525 1.21948 305.47 1.21948 298.001V195.878C1.21948 188.41 7.27422 182.355 14.7431 182.355Z" stroke="#3F3D56" stroke-miterlimit="10"/>
+            <path class = "ballLineOne" d="M432.5 54.5C464.5 21 547.5 17 517.5 49" stroke="none"/>
+
+            <path class = "ballLineTwo" d="M93.5 113.5C225 38 215.5 143.5 181.5 133" stroke="none"/>
+            <path class = "ballLineThree" d="M310.5 300.5C390.5 279 334.5 216.5 310.5 261" stroke="none"/>
+            </svg>
+            
+
+          
+
+
         </div>
       </div>
     </section>
