tempory form page switch

--- a/index.html
+++ b/index.html
@@ -714,6 +714,13 @@
         </svg>
         
     </section>
+    <form style = "z-index: 999;" action="contactform.php" method="POST">
+      <input type="text" name="name" placeholder="Your name" />
+      <input type="email" name="email" placeholder="Email" />
+      <input type="text" name="subject" placeholder="Subject" />
+      <input type="text" name="message" placeholder="Your message" />
+      <button type="submit" name="submit">Send Mail</button>
+    </form>
     <footer>
       <div class="wrapper">
         <ul class="footer-list">
