learning json manipulation

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       </div>
       <div class="nav-menu">
         <ul class="nav-links">
-          <li class="nav-link"><a href="#">Case Studies</a></li>
-          <li class="nav-link"><a href="src/pages/contact.html">Contact</a></li>
+          <li class="nav-link nav-green"><a href="src/pages/casestudies.html">Case Studies -green </a></li>
+          <li class="nav-link nav-blue"><a href="src/pages/casestudies.html">Contact - blue</a></li>
         </ul>
         <div class="hamburger-menu">
           <span class="ham-line"></span>
@@ -144,11 +144,6 @@
         alt="colourful triangle made from stokes"
         class="abstract triangle"
       />
-      <img
-        src="/src/img/abstract/gradientDotGrid.svg"
-        alt="grid of coloured dots"
-        class="abstract dots"
-      />
       <div class="about-content">
         <div class="text-block first">
           <div class="text-wrapper">
@@ -168,32 +163,32 @@
           <svg class = "multi-board" width="763" height="639" viewBox="0 0 763 639" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M349.285 637.909C211.528 631.781 101.28 548.72 52.4982 432.5C-6.20715 292.636 -40.91 116.207 93.4682 28.4336C227.629 -59.1971 388.852 78.2359 522.5 166.5C653.628 253.1 801.557 324.007 752.443 463.636C702.663 605.156 513.877 645.23 349.285 637.909Z" fill="#FFEFEF"/>
             <g clip-path="url(#clip0)">
-            <path d="M76.2646 69.2971H156.195V150.855H76.2646V69.2971Z" fill="#2F2E41"/>
+            <path class = "panel left-back-panel" d="M76.2646 69.2971H156.195V150.855H76.2646V69.2971Z" fill="#2F2E41"/>
             <path d="M197.839 92.2603H426.883V316.348H197.839V92.2603Z" fill="#333246"/>
             <path d="M266.686 129.476H358.035V142.937H266.686V129.476Z" fill="white"/>
             <path d="M332.176 161.149H395.65V169.067H332.176V161.149Z" fill="white"/>
             <path d="M281.128 213.41H344.602V221.328H281.128V213.41Z" fill="white"/>
             <path d="M230.08 161.149H293.554V169.067H230.08V161.149Z" fill="#3C60B9"/>
-            <path d="M87.6832 115.223H145.448V118.889H87.6832V115.223Z" fill="#3C60B9"/>
-            <path d="M88.3548 123.288H146.119V126.954H88.3548V123.288Z" fill="#3C60B9"/>
-            <path d="M87.6832 131.353H145.448V135.019H87.6832V131.353Z" fill="#3C60B9"/>
-            <path d="M87.6832 88.301H145.448V91.9669H87.6832V88.301Z" fill="#3C60B9"/>
-            <path d="M88.3548 96.366H146.119V100.032H88.3548V96.366Z" fill="#3C60B9"/>
-            <path d="M87.6832 104.431H145.448V108.097H87.6832V104.431Z" fill="#3C60B9"/>
-            <path d="M53.4272 96.2192H133.357V177.778H53.4272V96.2192Z" fill="#333246"/>
-            <path d="M64.8459 142.145H122.611V145.811H64.8459V142.145Z" fill="#3C60B9"/>
-            <path d="M65.5176 150.21H123.282V153.876H65.5176V150.21Z" fill="#3C60B9"/>
-            <path d="M64.8459 158.275H122.611V161.941H64.8459V158.275Z" fill="#3C60B9"/>
-            <path d="M64.8459 115.223H122.611V118.889H64.8459V115.223Z" fill="#3C60B9"/>
-            <path d="M65.5176 123.288H123.282V126.954H65.5176V123.288Z" fill="#3C60B9"/>
-            <path d="M64.8459 131.353H122.611V135.019H64.8459V131.353Z" fill="#3C60B9"/>
-            <path d="M527.635 127.893H607.565V209.451H527.635V127.893Z" fill="#333246"/>
-            <path d="M539.054 173.819H596.818V177.484H539.054V173.819Z" fill="#3C60B9"/>
-            <path d="M539.726 181.883H597.49V185.549H539.726V181.883Z" fill="#3C60B9"/>
-            <path d="M539.054 189.948H596.818V193.614H539.054V189.948Z" fill="#3C60B9"/>
-            <path d="M539.054 146.896H596.818V150.562H539.054V146.896Z" fill="#3C60B9"/>
-            <path d="M539.726 154.961H597.49V158.627H539.726V154.961Z" fill="#3C60B9"/>
-            <path d="M539.054 163.026H596.818V166.692H539.054V163.026Z" fill="#3C60B9"/>
+            <path class = "panel-line left-back-panel" d="M87.6832 115.223H145.448V118.889H87.6832V115.223Z" fill="#3C60B9"/>
+            <path class = "panel-line left-back-panel" d="M88.3548 123.288H146.119V126.954H88.3548V123.288Z" fill="#3C60B9"/>
+            <path class = "panel-line left-back-panel" d="M87.6832 131.353H145.448V135.019H87.6832V131.353Z" fill="#3C60B9"/>
+            <path class = "panel-line left-back-panel" d="M87.6832 88.301H145.448V91.9669H87.6832V88.301Z" fill="#3C60B9"/>
+            <path class = "panel-line left-back-panel" d="M88.3548 96.366H146.119V100.032H88.3548V96.366Z" fill="#3C60B9"/>
+            <path class = "panel-line left-back-panel" d="M87.6832 104.431H145.448V108.097H87.6832V104.431Z" fill="#3C60B9"/>
+            <path class = "panel left-front-panel" d="M53.4272 96.2192H133.357V177.778H53.4272V96.2192Z" fill="#333246"/>
+            <path class = "panel-line left-front-panel"d="M64.8459 142.145H122.611V145.811H64.8459V142.145Z" fill="#3C60B9"/>
+            <path class = "panel-line left-front-panel"d="M65.5176 150.21H123.282V153.876H65.5176V150.21Z" fill="#3C60B9"/>
+            <path class = "panel-line left-front-panel"d="M64.8459 158.275H122.611V161.941H64.8459V158.275Z" fill="#3C60B9"/>
+            <path class = "panel-line left-front-panel"d="M64.8459 115.223H122.611V118.889H64.8459V115.223Z" fill="#3C60B9"/>
+            <path class = "panel-line left-front-panel"d="M65.5176 123.288H123.282V126.954H65.5176V123.288Z" fill="#3C60B9"/>
+            <path class = "panel-line left-front-panel"d="M64.8459 131.353H122.611V135.019H64.8459V131.353Z" fill="#3C60B9"/>
+            <path class = "panel right-panel" d="M527.635 127.893H607.565V209.451H527.635V127.893Z" fill="#333246"/>
+            <path class = "panel-line right-panel" d="M539.054 173.819H596.818V177.484H539.054V173.819Z" fill="#3C60B9"/>
+            <path class = "panel-line right-panel" d="M539.726 181.883H597.49V185.549H539.726V181.883Z" fill="#3C60B9"/>
+            <path class = "panel-line right-panel" d="M539.054 189.948H596.818V193.614H539.054V189.948Z" fill="#3C60B9"/>
+            <path class = "panel-line right-panel" d="M539.054 146.896H596.818V150.562H539.054V146.896Z" fill="#3C60B9"/>
+            <path class = "panel-line right-panel" d="M539.726 154.961H597.49V158.627H539.726V154.961Z" fill="#3C60B9"/>
+            <path class = "panel-line right-panel" d="M539.054 163.026H596.818V166.692H539.054V163.026Z" fill="#3C60B9"/>
             <path d="M229.072 187.28H395.65V195.198H229.072V187.28Z" fill="white"/>
             <path d="M358.371 213.41H395.65V221.328H358.371V213.41Z" fill="#3C60B9"/>
             <path d="M358.371 265.671H395.65V273.589H358.371V265.671Z" fill="white"/>
@@ -714,13 +709,13 @@
         </svg>
         
     </section>
-    <form style = "z-index: 999;" action="contactform.php" method="POST">
+    <!-- <form style = "z-index: 999;" action="contactform.php" method="POST">
       <input type="text" name="name" placeholder="Your name" />
       <input type="email" name="email" placeholder="Email" />
       <input type="text" name="subject" placeholder="Subject" />
       <input type="text" name="message" placeholder="Your message" />
       <button type="submit" name="submit">Send Mail</button>
-    </form>
+    </form> -->
     <footer>
       <div class="wrapper">
         <ul class="footer-list">
