code to change contents based on json

--- a/src/pages/caseStudies/index.html
+++ b/src/pages/caseStudies/index.html
@@ -17,11 +17,11 @@
       </ul>
     </nav>
 
-    <div id="main-content">
+    <div id="mainContent">
       <div id="guts">
-        <h2>Ethnographic immersion study</h2>
+        <h2 id="studyTitle">Ethnographic immersion study</h2>
 
-        <p class="adaptive">
+        <p class="studyBody">
           Ethnographic immersion blah blah Lorem ipsum dolor sit amet
           consectetur adipisicing elit. Architecto ipsum ab totam? Maiores, iste
           explicabo magni optio vero minima nostrum.
