updated case study Links

--- a/src/pages/caseStudies/index.html
+++ b/src/pages/caseStudies/index.html
@@ -21,7 +21,7 @@
       <div id="guts">
         <h2 id="studyTitle">Ethnographic immersion study</h2>
 
-        <p class="studyBody">
+        <p id="studyBody">
           Ethnographic immersion blah blah Lorem ipsum dolor sit amet
           consectetur adipisicing elit. Architecto ipsum ab totam? Maiores, iste
           explicabo magni optio vero minima nostrum.
