--- a/src/pages/caseStudies/index.html
+++ b/src/pages/caseStudies/index.html
@@ -4,30 +4,185 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Case studies</title>
-    <script src="../../js/modernizer.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <link rel="stylesheet" href="caseStudies.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Case Studies</h1>
+    <div class="content">
+      <svg
+        id="casesvg"
+        preserveAspectratio="none"
+        viewBox="0 0 1440 1018"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M-2.58852 -9H1439.93V108C1117.43 282.5 930.431 177.672 706.931 223C283.431 308.891 788.5 938 194 1000.5C-400.5 1063 -65.5693 948 -14.5694 734.5L-2.58852 -9Z"
+          fill="url(#paint0_linear)"
+        />
+        <defs>
+          <linearGradient
+            id="paint0_linear"
+            x1="10.9113"
+            y1="3.76725"
+            x2="781.52"
+            y2="827.422"
+            gradientUnits="userSpaceOnUse"
+          >
+            <stop stop-color="#3B5EB9" />
+            <stop offset="1" stop-color="#33C6CF" />
+          </linearGradient>
+        </defs>
+      </svg>
 
-    <nav>
-      <ul class="group">
-        <li><span class="link" data-url="bindex.html">BINDEX</span></li>
-        <li><span class="link" data-url="index.html">index</span></li>
-      </ul>
-    </nav>
+      <svg
+        id="mobileCase"
+        preserveAspectRatio="none"
+        viewBox="0 0 375 219"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M-19.4998 -34.0002L382 -34.0005C382 -34.0005 480 295.5 374 201.5C268 107.5 78.5 234 -0.500267 139C-79.5006 44 -19.4998 -34.0002 -19.4998 -34.0002Z"
+          fill="url(#caseMob_linear)"
+        />
+        <defs>
+          <linearGradient
+            id="caseMob_linear"
+            x1="131.5"
+            y1="-12"
+            x2="219.5"
+            y2="196"
+            gradientUnits="userSpaceOnUse"
+          >
+            <stop stop-color="#2F80ED" />
+            <stop offset="1" stop-color="#10C3D5" />
+          </linearGradient>
+        </defs>
+      </svg>
 
-    <div id="mainContent">
-      <div id="guts">
-        <h2 id="studyTitle">Ethnographic immersion study</h2>
+      <nav class="nav">
+        <div class="logo">
+          <img
+            class="desktop"
+            src="/src/img/substanceqiLogo.svg"
+            alt="substanceqiLogo"
+          />
+          <img
+            class="mobile"
+            src="/src/img/mobileSubstanceqiLogo.svg"
+            alt="substanceqiLogo"
+          />
+        </div>
+        <div class="nav-menu">
+          <ul class="nav-links">
+            <li class="nav-link nav-green">
+              <a href="src/pages/casestudies.html">Home</a>
+            </li>
+            <li class="nav-link nav-blue">
+              <a href="src/pages/casestudies.html">Contact us</a>
+            </li>
+          </ul>
+          <div class="hamburger-menu">
+            <span class="ham-line"></span>
+            <span class="ham-line"></span>
+            <span class="ham-line"></span>
+          </div>
+        </div>
+      </nav>
+      <h1 class="page-title">Case Studies</h1>
+      <div class="flex-wrapper">
+        <div class="flex-left">
+          <div class="list-container">
+            <ul class="list-set current-list" id="list1">
+              <li class="link current-link" data-article="ethno financial">
+                Ethnographic Deep Dive - Financial Services
+              </li>
+              <li class="link" data-article="ethno tobacco">
+                Ethnographic Deep Dive - Tobacco
+              </li>
+              <li class="link" data-article="innovation b2b">
+                Innovation – Fusion Days – B2B Services
+              </li>
+              <li class="link" data-article="innovation fmcg">
+                Innovation - Fusion Days - FMCG
+              </li>
+              <li class="link" data-article="equity telco">
+                Equity Drivers - Quality Perceptions - Telco
+              </li>
+            </ul>
+            <ul class="list-set" id="list2">
+              <li class="link" data-article="buying habits">
+                Customer Experience – Buying Habits - FMCG
+              </li>
+              <li class="link" data-article="branding fmcg">
+                Branding – Brand Stretch - FMCG
+              </li>
+              <li class="link" data-article="relationships retail">
+                Relationships – Trade Attitudes - Retail
+              </li>
+              <li class="link" data-article="pack design">
+                Design – Pack Design - Vaping
+              </li>
+              <li class="link" data-article="customer moments of truth">
+                Customer Experience – Moments of Truth – Financial Services
+              </li>
+            </ul>
+            <ul class="list-set" id="list3">
+              <li class="link" data-article="spam utility">
+                S.P.A.M – Communications – Utility
+              </li>
+              <li class="link" data-article="ethno safari">
+                Ethnographic – Client Safari - FMCG
+              </li>
+              <li class="link" data-article="sensory food">
+                Sensory Testing – Tactile Dynamics – Food
+              </li>
+              <li class="link" data-article="user experience online">
+                User Experience – Online Purchasing – Financial Services
+              </li>
+              <li class="link" data-article="home usage test">
+                Product Testing – Home Usage Test – Tobacco
+              </li>
+            </ul>
+            <div class="pagination">
+              <span class="material-icons arr" data-value="-1"
+                >keyboard_arrow_left</span
+              >
+              <span class="page-num current-page" id="page1">1</span>
+              <span class="page-num" id="page2">2</span>
+              <span class="page-num" id="page3">3</span>
+              <span class="material-icons arr" data-value="1"
+                >keyboard_arrow_right</span
+              >
+            </div>
+          </div>
+        </div>
 
-        <p id="studyBody">
-          Ethnographic immersion blah blah Lorem ipsum dolor sit amet
-          consectetur adipisicing elit. Architecto ipsum ab totam? Maiores, iste
-          explicabo magni optio vero minima nostrum.
-        </p>
+        <div class="flex-right">
+          <div id="mainContent">
+            <div id="guts">
+              <h2 id="studyTitle">Random Case Study Title</h2>
+
+              <p id="studyBody">
+                Random body for some content
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+
+    <footer></footer>
     <script src="../../js/adaptive.js"></script>
+    <script src="../../js/hamburger.js"></script>
   </body>
 </html>
