mobile case study navigation

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
       <div class="nav-menu">
         <ul class="nav-links">
-          <li class="nav-link nav-green"><a href="src/pages/casestudies.html">Case Studies</a></li>
+          <li class="nav-link nav-green"><a href="src/pages/caseStudies/index.html">Case Studies</a></li>
           <li class="nav-link nav-blue"><a href="src/pages/contact/contact.html">Contact</a></li>
         </ul>
         <div class="hamburger-menu">
@@ -57,21 +57,21 @@
           <li class="side-link case">Case Studies <i class="material-icons">keyboard_arrow_down</i> </li>
           <li>
             <ul class = inner-list>
-              <li class="inner-list-item">Ethnographic Deep Dive - Financial Services </li>
-              <li class="inner-list-item">Ethnographic Deep Dive - Tobacco </li>
-              <li class="inner-list-item">Innovation – Fusion Days – B2B Services </li>
-              <li class="inner-list-item">Innovation - Fusion Days - FMCG </li>
-              <li class="inner-list-item">Equity Drivers - Quality Perceptions - Telco </li>
-              <li class="inner-list-item">Buying Habits - FMCG </li>
-              <li class="inner-list-item">Branding – Brand Stretch - FMCG</li>
-              <li class="inner-list-item">Relationships – Trade Attitudes - Retail </li>
-              <li class="inner-list-item">Pack Design - Vaping </li>
-              <li class="inner-list-item">Customer Experience – Moments of Truth </li>
-              <li class="inner-list-item">S.P.A.M – Communications – Utility </li>
-              <li class="inner-list-item">Ethnographic – Client Safari - FMCG </li>
-              <li class="inner-list-item">Sensory Testing – Tactile Dynamics – Food </li>
-              <li class="inner-list-item">User Experience – Online Purchasing</li>
-              <li class="inner-list-item">Product Testing – Home Usage Test – Tobacco </li>
+              <li class="inner-list-item" data-study="ethno financial"> <a href="/src/pages/caseStudies/index.html">Ethnographic Deep Dive - Financial Services</a></li>
+              <li class="inner-list-item" data-study="ethno tobacco"> <a href="/src/pages/caseStudies/index.html">Ethnographic Deep Dive - Tobacco </li></a>
+              <li class="inner-list-item" data-study="innovation b2b"> <a href="/src/pages/caseStudies/index.html">Innovation – Fusion Days – B2B Services </li></a>
+              <li class="inner-list-item" data-study="innovation fmcg"> <a href="/src/pages/caseStudies/index.html">Innovation - Fusion Days - FMCG </li></a>
+              <li class="inner-list-item" data-study="equity telco"> <a href="/src/pages/caseStudies/index.html">Equity Drivers - Quality Perceptions - Telco </li></a>
+              <li class="inner-list-item" data-study="buying habits"> <a href="/src/pages/caseStudies/index.html">Buying Habits - FMCG </li></a>
+              <li class="inner-list-item" data-study="branding fmcg"> <a href="/src/pages/caseStudies/index.html">Branding – Brand Stretch - FMCG</li></a>
+              <li class="inner-list-item" data-study="relationships retail"> <a href="/src/pages/caseStudies/index.html">Relationships – Trade Attitudes - Retail </li></a>
+              <li class="inner-list-item" data-study="pack design"> <a href="/src/pages/caseStudies/index.html">Pack Design - Vaping </li></a>
+              <li class="inner-list-item" data-study="customer moments of truth"> <a href="/src/pages/caseStudies/index.html">Customer Experience – Moments of Truth </li></a>
+              <li class="inner-list-item" data-study="spam utility"> <a href="/src/pages/caseStudies/index.html">S.P.A.M – Communications – Utility </li></a>
+              <li class="inner-list-item" data-study="ethno safari"> <a href="/src/pages/caseStudies/index.html">Ethnographic – Client Safari - FMCG </li></a>
+              <li class="inner-list-item" data-study="sensory food"> <a href="/src/pages/caseStudies/index.html">Sensory Testing – Tactile Dynamics – Food </li></a>
+              <li class="inner-list-item" data-study="user experience online"> <a href="/src/pages/caseStudies/index.html">User Experience – Online Purchasing</li></a>
+              <li class="inner-list-item" data-study="home usage test"> <a href="/src/pages/caseStudies/index.html">Product Testing – Home Usage Test – Tobacco </li></a>
             </ul>
           </li>
         </ul>
@@ -79,7 +79,7 @@
       
     </div>
 
-    <div class="dimmer"></div>
+  
 
     
     <section class="hero">
