--- a/src/pages/caseStudies/index.html
+++ b/src/pages/caseStudies/index.html
@@ -213,8 +213,21 @@
         </div>
       </div>
     </div>
+        <footer>
+          <div class="wrapper">
+            <ul class="footer-list">
+              <li><h4>About</h4></li>
+              <li><a href="#">Case Studies</a></li>
+              <li><p>Site by Sean Stanfield</p></li>
+            </ul>
+            <ul class="footer-list">
+              <li><h4>Contact us</h4></li>
+              <li><p>info@substanceqi.com</p></li>
+              <li><p>07725 593167</p></li>
+            </ul>
+          </div>
+        </footer>
 
-    <footer></footer>
     <script src="../../js/adaptive.js"></script>
     <script src="../../js/hamburger.js"></script>
   </body>
